--- a/finalx.html
+++ b/finalx.html
@@ -10,9 +10,11 @@
 <body>
     <h1>
         este es el ultimo projecto final
+        para hacer la diferecia
     </h1>
     <p>
-        Hoy ya quiero sacar este projecto adelante para mejorar 
+        Hoy ya quiero sacar este projecto adelante para mejorar.
+        en este commit vamos a poner lo nuevo de todo mas el branch todo lo que tenga que ver con lo que estamos aprndiendo para mejorar lo mejor de todo asi,
     </p>
     
 </body>
