commit cambios master

--- a/finalx.html
+++ b/finalx.html
@@ -14,6 +14,7 @@
     <p>
         Hoy ya quiero sacar este projecto adelante para mejorar 
     </p>
+    <h2>esta es la master x</h2>
     
 </body>
 </html>
