las commit desde git hub
porque puedo

--- a/finalx.html
+++ b/finalx.html
@@ -12,11 +12,14 @@
         este es el ultimo projecto final
         para hacer la diferecia
     </h1>
+    
     <p>
         Hoy ya quiero sacar este projecto adelante para mejorar.
         en este commit vamos a poner lo nuevo de todo mas el branch todo lo que tenga que ver con lo que estamos aprndiendo para mejorar lo mejor de todo asi,
     </p>
-    <h2>esta es la master x</h2>
+    <h2>esta es la master x
+        bueno este nuevo parafo lo hacemos para mejorar el entendimiento en esto de git 
+    </h2>
     
 </body>
 </html>
